add fundamental frequency

--- a/IE-2019-D-HLS/data_processing.ipynb
+++ b/IE-2019-D-HLS/data_processing.ipynb
@@ -191,9 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_893/2759868762.py:2: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "from music21 import *\n",
     "import pandas as pd\n",
@@ -362,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -372,6 +387,16 @@
       "/home/xana/.local/lib/python3.10/site-packages/music21/stream/base.py:3694: Music21DeprecationWarning: .flat is deprecated.  Call .flatten() instead\n",
       "  return self.iter().getElementsByClass(classFilterList)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['3/8']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -382,15 +407,227 @@
     "notes = list(score.get_all_notes()['pitch'])\n",
     "info = score.get_all_notes()\n",
     "key = score.get_key() \n",
-    "intervals = score.get_intervals()"
+    "intervals = score.get_intervals()\n",
+    "time_sig = score.get_time_signature()\n",
+    "\n",
+    "time_sig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_893/1072836019.py:6: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  aux['measure'] = row[1][1]\n",
+      "/tmp/ipykernel_893/1072836019.py:7: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  aux['offset'] = row[1][2]\n",
+      "/tmp/ipykernel_893/1072836019.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  aux['duration'] = row[1][3]\n",
+      "/tmp/ipykernel_893/1072836019.py:9: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  aux['pitch'] = row[1][4].nameWithOctave\n",
+      "/tmp/ipykernel_893/1072836019.py:14: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  octave = int(re.sub(r\"[^0-9]+\", \"\", row[1][4].nameWithOctave))\n",
+      "/tmp/ipykernel_893/1072836019.py:15: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  acc = re.sub(r\"[^#b]\", \"\", row[1][4].nameWithOctave)\n",
+      "/tmp/ipykernel_893/1072836019.py:16: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  note = re.sub(r\"[^a-zA-Z]+\", \"\", row[1][4].nameWithOctave)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'measure': 1,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 0.5,\n",
+       "  'pitch': 'D4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 50},\n",
+       " {'measure': 2,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.0,\n",
+       "  'pitch': 'G4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 53},\n",
+       " {'measure': 2,\n",
+       "  'offset': 1.0,\n",
+       "  'duration': 0.5,\n",
+       "  'pitch': 'G4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 53},\n",
+       " {'measure': 3,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.0,\n",
+       "  'pitch': 'G4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 53},\n",
+       " {'measure': 3,\n",
+       "  'offset': 1.0,\n",
+       "  'duration': 0.5,\n",
+       "  'pitch': 'B4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 55},\n",
+       " {'measure': 4,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.5,\n",
+       "  'pitch': 'D5',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 62},\n",
+       " {'measure': 5,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.5,\n",
+       "  'pitch': 'G4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 53},\n",
+       " {'measure': 6,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.5,\n",
+       "  'pitch': 'A4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 54},\n",
+       " {'measure': 7,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.5,\n",
+       "  'pitch': 'A4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 54},\n",
+       " {'measure': 8,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.5,\n",
+       "  'pitch': 'F#4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 52.5},\n",
+       " {'measure': 9,\n",
+       "  'offset': 1.0,\n",
+       "  'duration': 0.5,\n",
+       "  'pitch': 'D4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 50},\n",
+       " {'measure': 9,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.0,\n",
+       "  'pitch': 'D4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 50},\n",
+       " {'measure': 10,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.0,\n",
+       "  'pitch': 'G4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 53},\n",
+       " {'measure': 10,\n",
+       "  'offset': 1.0,\n",
+       "  'duration': 0.5,\n",
+       "  'pitch': 'G4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 53},\n",
+       " {'measure': 11,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.0,\n",
+       "  'pitch': 'G4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 53},\n",
+       " {'measure': 11,\n",
+       "  'offset': 1.0,\n",
+       "  'duration': 0.5,\n",
+       "  'pitch': 'B4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 55},\n",
+       " {'measure': 12,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.5,\n",
+       "  'pitch': 'D5',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 62},\n",
+       " {'measure': 13,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.5,\n",
+       "  'pitch': 'G4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 53},\n",
+       " {'measure': 14,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.5,\n",
+       "  'pitch': 'A4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 54},\n",
+       " {'measure': 15,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.5,\n",
+       "  'pitch': 'D4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 50},\n",
+       " {'measure': 16,\n",
+       "  'offset': 0.0,\n",
+       "  'duration': 1.5,\n",
+       "  'pitch': 'G4',\n",
+       "  'numerator': 3,\n",
+       "  'denominator': 8,\n",
+       "  'id': 53}]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re \n",
+    "contour = []\n",
+    "for row in info.iterrows():\n",
+    "    # print(row[1][1])\n",
+    "    aux = {}\n",
+    "    aux['measure'] = row[1][1]\n",
+    "    aux['offset'] = row[1][2]\n",
+    "    aux['duration'] = row[1][3]\n",
+    "    aux['pitch'] = row[1][4].nameWithOctave\n",
+    "    aux['numerator'] = int(time_sig[0].split('/')[0])\n",
+    "    aux['denominator'] = int(time_sig[0].split('/')[1])\n",
+    "\n",
+    "\n",
+    "    octave = int(re.sub(r\"[^0-9]+\", \"\", row[1][4].nameWithOctave))\n",
+    "    acc = re.sub(r\"[^#b]\", \"\", row[1][4].nameWithOctave)\n",
+    "    note = re.sub(r\"[^a-zA-Z]+\", \"\", row[1][4].nameWithOctave)\n",
+    "\n",
+    "    accidental = 0\n",
+    "    dic = {'C': 1, 'D': 2, 'E': 3, 'F': 4, 'G': 5, 'A': 6, 'B': 7}\n",
+    "\n",
+    "    if acc == '#':\n",
+    "        accidental += 0.5\n",
+    "    if acc == 'b':\n",
+    "        accidental -= 0.5\n",
+    "\n",
+    "    aux['id'] = (octave * 12) + (accidental) + dic[note]\n",
+    "\n",
+    "    contour.append(aux)\n",
+    "\n",
+    "\n",
+    "contour"
+   ]
   },
   {
    "cell_type": "code",
@@ -1236,6 +1473,27 @@
     "# info_about_measures = [dict(zip(info_about_measures, i)) for i in zip(*info_about_measures.values())]   \n",
     "len(info_about_measures)\n",
     "info_about_measures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'info' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_893/1856481466.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minfo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'info' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "info"
    ]
   },
   {
